# thought-cycle

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EVIDENCE.md  MANIFESTO.md  README.md  SECURITY.md  install.sh
.github/workflows/: test.yml
before-turn/: CONTRIBUTING.md  EVASION_PATTERNS.md  README.md  SKILL.md  pyproject.toml
before-turn/scripts/: __init__.py  quick_check.py
before-turn/tests/: test_quick_check.py
open-mind/: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
open-mind/.github/: PULL_REQUEST_TEMPLATE.md
open-mind/.github/ISSUE_TEMPLATE/: bug_report.md
open-mind/.github/workflows/: ci.yml
open-mind/examples/: basic_comparison.py
open-mind/open_mind/: __init__.py  comparator.py  conversation.py
open-mind/tests/unit/: test_comparator.py
pre-response-selfcheck/: .gitignore  DESIGN.md  LICENSE  MANIFESTO.md  README.md  SKILL.md  pyproject.toml
pre-response-selfcheck/.github/: PULL_REQUEST_TEMPLATE.md
pre-response-selfcheck/.github/ISSUE_TEMPLATE/: feature_request.md
pre-response-selfcheck/examples/: basic.py
pre-response-selfcheck/pre_response_selfcheck/: __init__.py  reader_shift.py
pre-response-selfcheck/tests/: test_reader_shift.py
