[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "before-turn"
version = "0.1.0"
authors = [
    { name = "QuietFire AI", email = "support@quietfireai.com" },
]
description = "Before-turn behavioral governance protocol for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "agents", "governance", "reasoning", "metacognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://dispatcheragents.com"
Repository = "https://github.com/QuietFireAI/before-turn"

[project.scripts]
before-turn = "scripts.quick_check:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
