[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-mind"
version = "0.1.0"
description = "AI agents reviewing their own thinking tokens vs their response. Detects drift, sycophancy, and constructed confidence."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "QuietFire AI", email = "support@quietfireai.com" }
]
keywords = ["ai", "llm", "thinking-tokens", "drift-detection", "transparency", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/QuietFireAI/open-mind"
Repository = "https://github.com/QuietFireAI/open-mind"
"Bug Tracker" = "https://github.com/QuietFireAI/open-mind/issues"
"DispatcherAgents" = "https://dispatcheragents.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_mind*"]
